# mooze-dealer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  log4rs.yaml
.github/workflows/: rust.yml
.sqlx/: query-1f51517cdd62d6b60ef8ff78eeaa0de9919d5aa2f280afb776dcb77afc3a23ef.json  query-3fb307d94b2038f461a7ab6b678580c07ec2c63491be3ed006344f1d22dcf798.json  query-4747727f2e44989389b18df100e6cbf732a48445f66506702e970e606582c115.json  query-4fb99ab454f1ebb9aad6ec16c1e85a913abc6033f6fd9c30d7905e642592fcf1.json  query-5cc5f352fecdd8acd960cbe34d83903c9cc04e3aa42e598b4df8581a97afc516.json  query-5d4f377808949b3e8cac8e8a2df3f1e96f21924f2b36169399a06a5280537a7b.json  query-62542bd6483560d7dd0d12387426320092b2c2b623bcd2fde348dd34a7f3e8fb.json  query-677094bdf0ae819838d567d17e56bfc935ab179f853eb003ba1c96ed526fd65a.json  query-792815251cf4d5ffbfda6fdef324162c11fcf8ec1f7d124931f2ea5031d34c77.json  query-814954516b77e8632a526eb6fbf201255bef687d4337bc4f008a61ea6bf74f72.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-c113a69dd7f6542bf163981ea3aa2dbcf9b0155295e75035c548e839f90824ce.json  query-cd1d65bdcc3722c63ef743958f0204c42381cc40785ba5260e0a51ef37e22467.json  query-ed0115cb90a4da170fb26c6fa3eb4f8263ef342a11878ccf819fe87c87aaa84e.json  query-ef4ca289b4663910abd18b26b0070ce3e514996240e292f049eecba54ae8e573.json  query-efbdad5bd7527e28257a0d5ebde863306b4dbe43b763be12a3270f7aeaba4e6c.json
mooze-dealer/: Cargo.toml
mooze-dealer/src/: main.rs  repositories.rs
mooze-dealer/src/models/: sideswap.rs  swap.rs
mooze-dealer/src/repositories/pix/: eulen.rs
mooze-dealer/src/services/: liquidity.rs  users.rs
mooze-dealer/src/services/http/: users.rs
mooze-dealer/src/services/sideswap/: client.rs
mooze-swap/: Cargo.toml
mooze-swap/src/: main.rs  models.rs  server.rs  service.rs  settings.rs
mooze-swap/src/service/: sideswap.rs  wallet.rs
mooze-wallet/: Cargo.toml
mooze-wallet/src/: main.rs  server.rs  settings.rs  wallet.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/proto/: swap.proto  wallet.proto
src/: main.rs  models.rs  repositories.rs  server.rs  services.rs  settings.rs
src/models/: pix.rs  referrals.rs  sideswap.rs  transactions.rs  users.rs
src/models/server/: pix.rs
src/repositories/: liquid.rs  pix.rs  price.rs  sideswap.rs  swap.rs  transactions.rs  users.rs
src/repositories/pix/: eulen.rs
src/repositories/swap/: sideswap.rs
src/server/: eulen.rs  pix.rs  transaction.rs
src/services/: http.rs  liquid.rs  liquidity.rs  pix.rs  price.rs  sideswap.rs  swap.rs  transactions.rs  users.rs
src/services/blockchain/: liquid.rs
src/services/http/: users.rs
src/services/sideswap/: client.rs
src/utils/: json_rpc.rs
