[workspace]
members = [
    "mooze-dealer",
    "mooze-swap",
    "mooze-wallet",
    "proto"
]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.13.0"
prost = "0.13.5"
anyhow = "1.0.71"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
clap = { version = "4.3.4", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
futures-util = "0.3.31"
thiserror = "2.0.12"
config = { version = "0.15.11", features = ["toml"] }
dashmap = "6.1.0"