[package]
name = "mooze-dealer"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
futures-util = { workspace = true }

async-trait = "0.1.68"
axum = "0.8.3"
reqwest = { version = "0.12.15", features = ["json"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tungstenite = "0.26.2"
uuid = { version = "1.15.1", features = ["v4"] }
chrono = "0.4.40"
bdk = "0.30.2"
lwk_wollet = "0.9.0"
lwk_signer = "0.9.0"
lwk_common = "0.9.0"
directories = "6.0.0"