[package]
name="mooze-wallet"
version="0.1.0"
edition="2021"

[dependencies]
proto = { path = "../proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

bdk = "0.30.2"
lwk_wollet = "0.9.0"
lwk_signer = "0.9.0"
lwk_common = "0.9.0"
directories = "6.0.0"